--- a/style.css
+++ b/style.css
@@ -1746,175 +1746,9 @@ p.has-background {
   color: var(--code);
 }
 
-/** Blue colours **/
-.has-blue-background-color {
-	background-color: var(--accent) !important;
-}
-.has-blue-color {
-	color: var(--accent);
-}
-.has-blue-color a {
-	color: var(--accent);
-	border-bottom: 3px solid var(--accent) !important;
-  background: none;
-  border-radius: 0;
-}
-.has-blue-color a:hover {
-	color: var(--accent);
-	border-bottom: 2px dotted var(--accent) !important;
-}
-.has-blue-color code {
-	color: var(--accent);
-	background: var(--bg);
-}
-
-/** Green colours **/
-.has-green-background-color {
-	background-color: var(--green) !important;
-}
-.has-green-color {
-	color: var(--green);
-}
-.has-green-color a {
-	color: var(--green);
-	border-bottom: 3px solid var(--green) !important;
-  background: none;
-  border-radius: 0;
-}
-.has-green-color a:hover {
-	color: var(--green);
-	border-bottom: 2px dotted var(--green) !important;
-}
-.has-green-color code {
-	color: var(--green);
-	background: var(--bg);
-}
-
-/** Orange colours **/
-.has-orange-background-color {
-	background-color: var(--orange) !important;
-	color: var(--text) !important;
-}
-.has-orange-color {
-	color: var(--orange);
-}
-.has-orange-color a {
-	color: var(--orange);
-	border-bottom: 3px solid var(--orange) !important;
-  background: none;
-  border-radius: 0;
-}
-.has-orange-color a:hover {
-	color: var(--orange);
-	border-bottom: 2px dotted var(--orange) !important;
-}
-.has-orange-color code {
-	color: var(--orange);
-	background: var(--text);
-}
-
-/** Red colours **/
-.has-red-background-color {
-	background-color: var(--red) !important;
-}
-.has-red-color {
-	color: var(--red);
-}
-.has-red-color a {
-	color: var(--red);
-	border-bottom: 3px solid var(--red) !important;
-  background: none;
-  border-radius: 0;
-}
-.has-red-color a:hover {
-	color: var(--red);
-	border-bottom: 2px dotted var(--red) !important;
-}
-.has-red-color code {
-	color: var(--red);
-	background: var(--bg);
-}
-
-/** Grey colours **/
-.has-grey-background-color {
-	background-color: var(--grey) !important;
-}
-.has-grey-color {
-	color: var(--grey) !important;
-}
-.has-grey-color a, .has-grey-color a:visited {
-	color: var(--grey);
-	border-bottom: 3px solid var(--grey) !important;
-  background: none;
-  border-radius: 0;
-}
-.has-grey-color a:hover {
-	color: var(--grey);
-	border-bottom: 3px solid var(--grey) !important;
-}
-.has-grey-color code {
-	color: var(--code-text);
-	background: var(--code);
-}
-
-/** White colours **/
-.has-white-background-color {
-	background-color: var(--bg) !important;
-	border: 1px solid --var(main);
-}
-.has-white-color {
-	color: white;
-}
-.has-white-color a, .has-white-color a:visited {
-	color: white;
-	border-bottom: 3px solid white !important;
-  background: none;
-  border-radius: 0;
-}
-.has-white-color a:hover {
-	color: white;
-	border-bottom: 2px dotted white !important;
-}
-.has-white-color code {
-	color: var(--code-text);
-	background: var(--code);
-}
-
-/* Fix white text with blue background */
-
-.has-white-color.has-blue-background-color.has-text-color.has-background,
-.has-white-color.has-blue-background-color.has-text-color.has-background a,
-.has-white-color.has-blue-background-color.has-text-color.has-background a:visited {
-    color: var(--bg);
-    border-color: var(--bg) !important;
-}
-
-/* Format the old posts notice */
-.old-notice {
-    padding: 20px 30px;
-    background: var(--light-blue);
-    border: 3px solid var(--dark-blue);
-    margin: 1em 0;
-    color: var(--dark-blue);
-    text-align: center;
-}
-
-.old-notice a, .old-notice a:visited {
-	color: var(--dark-blue);
-	text-decoration-color: var(--dark-blue);
-}
-
-/* Format old notice in dark mode */
-@media (prefers-color-scheme: dark) {
-    .old-notice {
-        background: var(--accent);
-        color: var(--bg);
-        border: var(--accent);
-    }
-    .old-notice a, .old-notice a:visited {
-	    color: var(--bg);
-	    text-decoration-color: var(--bg);
-    }
+/* Hide title on home page */
+.page-id-3181 h1.entry-title {
+  display: none;
 }
 
 /* Guestbook formatting */
