--- a/style.css
+++ b/style.css
@@ -1137,7 +1137,8 @@ nav a:hover,
 }
 
 .nav-links {
-  font-size: 1.25rem;
+  font-size: 1.4rem;
+  font-weight: bold;
   color: var(--text);
   border-top: 3px solid var(--text);
   padding: 2rem 0;
