--- a/fonts/londrina/londrina.css
+++ b/fonts/londrina/londrina.css
@@ -3,28 +3,5 @@
     src: url('regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
-/*
-@font-face {
-    font-family: 'londrina';
-    src: url('italic.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'londrina';
-    src: url('bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'londrina';
-    src: url('bold-italic.woff') format('woff');
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
-}
-*/
