--- a/fonts/pt-sans/pt-sans.css
+++ b/fonts/pt-sans/pt-sans.css
@@ -10,6 +10,5 @@
     src: url('bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
-
