--- a/fonts/pt-sans/pt-sans.css
+++ b/fonts/pt-sans/pt-sans.css
@@ -3,7 +3,7 @@
     src: url('regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: 'pt-sans';
