--- a/style.css
+++ b/style.css
@@ -1471,7 +1471,8 @@ h1.site-logo a:hover {
 
 .header-border,
 .footer-border {
-  padding: 0 !important;
+  margin-left: -.5rem;
+  margin-right: -.5rem;
 }
 
 footer .search-form {
