--- a/style.css
+++ b/style.css
@@ -1471,8 +1471,7 @@ h1.site-logo a:hover {
 
 .header-border,
 .footer-border {
-  margin-left: -.5rem;
-  margin-right: -.5rem;
+  width: 100%;
 }
 
 footer .search-form {
