--- a/style.css
+++ b/style.css
@@ -341,7 +341,6 @@ img.rotate:hover {
   -o-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
   transform: rotate(360deg);
-  background: url("images/card-back.jpg") no-repeat;
 }
 
 /* Forms
@@ -701,11 +700,19 @@ h2.entry-title a {
   color: var(--header-text);
   text-decoration: none;
   display: inline-block;
-}
+  -webkit-transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -o-transition: all .25s ease-in-out;
+  transition: all 1s ease-in-out;
+  }
 
 h2.entry-title a:hover {
-  background: var(--accent);
-}
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+    -ms-transform: rotate(5deg);
+    transform: rotate(5deg);
+  }
 
 h1.entry-title {
   line-height: 1.2;
