--- a/style-editor.css
+++ b/style-editor.css
@@ -14,7 +14,7 @@ Tags:
 /* Custom fonts */
 @font-face {
     font-family: 'londrina';
-    src: url('fonts/lordina/regular.woff') format('woff');
+    src: url('fonts/londrina/regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: block;
