--- a/style-editor.css
+++ b/style-editor.css
@@ -19,10 +19,24 @@ Tags:
     font-style: normal;
     font-display: block;
 }
+@font-face {
+    font-family: 'pt-sans';
+    src: url('fonts/pt-sans/regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: block;
+}
+@font-face {
+    font-family: 'pt-sans';
+    src: u  rl('fonts/pt-sans/bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: block;
+}
 
 /* Global colour variables */
  :root {
-   --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
+   --sans-font: "pt-sans", -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
    --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   --accent: #0D47A1;
   --bg: #FAFAFA;
@@ -171,7 +185,7 @@ h6.rich-text.block-editor-rich-text__editable {
 
 .medium,
 .has-medium-font-size {
-  font-size: 1.5rem !important;
+  font-size: 1.75rem !important;
   line-height: 1.3 !important;
 }
 
