code block tweaks

--- a/style.css
+++ b/style.css
@@ -216,15 +216,15 @@ hr {
  pre {
  	font-family: var(--mono-font);
   background: var(--pre-bg) !important;
- 	margin-bottom: 1.6em;
+ 	margin-bottom: 1.5rem;
  	max-width: 100%;
  	overflow: auto;
- 	padding: 1.6em;
+ 	padding: 1.5rem;
  	max-height: 650px;
  }
 
  pre code {
-   font-size: 1.1rem;
+   font-size: 1rem;
    font-family: var(--mono-font);
    color: var(--pre-text);
    white-space: pre !important;
